# mycp

./: README.md
doc/: README
samples/: Makefile.in  configure
samples/DLLTest/: DLLTest.cpp  Makefile.am  Makefile.in
samples/DLLTestClient/: DLLTestClient.cpp  Makefile.am  Makefile.in
samples/OpenCommunication/: Makefile.am  Makefile.in  OpenCommunication.cpp
samples/cspApp/: Makefile.am  Makefile.in  cspApp.cpp
samples/cspServlet/: Makefile.am  Makefile.in  cspServlet.cpp
samples/proj/MSVC9.0/: DLLTest.vcproj  DLLTestClient.vcproj  OpenCommunication.vcproj  cspApp.vcproj  cspServlet.vcproj
src/: Makefile.in  configure  configure.in  myconfigure
src/CGCBase/: Makefile.am  Makefile.in  cdbc.h  cgcApplication.h  cgcApplication2.h  cgcAttributes.h  cgcCDBCService.h  cgcCommunications.h  cgcCookieInfo.h  cgcHttpRequest.h  cgcHttpResponse.h  cgcLock.h  cgcLogService.h  cgcParserBase.h  cgcParserHttp.h  cgcParserSotp.h  cgcRequest.h  cgcResponse.h  cgcSeqInfo.h  cgcService.h  cgcServices.h  cgcSession.h  cgcSmartString.h  cgcSotpRequest.h  cgcSotpResponse.h  cgcSystem.h  cgcaddress.h  cgcattachment.h  cgcbase.h  cgccdbcs.h  cgcdef.h  cgcfunc.h  cgcmultipart.h  cgcobject.h  cgcparameter.h  cgcrtpobject.h  cgcuploadfile.h  cgcuses.h  cgcutils.h  cgcvalueinfo.h  (+5 more)
src/CGCClass/: AttributesImpl.cpp  AttributesImpl.h  Makefile.am  Makefile.in  MethodItem.cpp  MethodItem.h  ModuleItem.cpp  ModuleItem.h  ParseCgcSotp2.cpp  ParseCgcSotp2.h  PpHttp.cpp  PpHttp.h  PpSotp2.cpp  PpSotp2.h  SotpCallTable2.cpp  SotpCallTable2.h  SotpRtpRoom.cpp  SotpRtpRoom.h  SotpRtpSession.cpp  SotpRtpSession.h  SotpRtpSource.cpp  SotpRtpSource.h  XmlParseUpload.h  cgcclassinclude.h
src/CGCComms/: CgcRemoteInfo.h  Makefile.in  configure  configure.in
src/CGCComms/CommTcp/: CommTcpServer.cpp  Makefile.am  Makefile.in
src/CGCComms/CommUdp/: CommUdpServer.cpp  Makefile.am  Makefile.in
src/CGCComms/proj/MSVC9.0/: CommTcpServer.vcproj  CommUdpServer.vcproj
src/CGCLib/: CGCLib.h  CgcBaseClient.cpp  CgcBaseClient.h  CgcClientHandler.h  CgcRtpClient.cpp  CgcRtpClient.h  CgcTcpClient.cpp  CgcTcpClient.h  CgcUdpClient.cpp  CgcUdpClient.h  Makefile.am  Makefile.in  SotpClient.cpp  SotpClient.h  cgcaddress.h
src/CGCServices/: Makefile.am  Makefile.in  configure  configure.in  myconfigure
src/CGCServices/Bodb/: BodbService.cpp  Makefile.am  Makefile.in
src/CGCServices/Configuration/: ConfigurationService.cpp  Makefile.in
src/CGCServices/DateTime/: DateTimeService.cpp  Makefile.am  Makefile.in
src/CGCServices/FileSystem/: FileSystemService.cpp  Makefile.am  Makefile.in
src/CGCServices/Http/: CgcTcpClient.cpp  CgcTcpClient.h  HttpService.cpp  Makefile.am  Makefile.in  cgcaddress.h
src/CGCServices/Namespace/: Makefile.in
src/CGCServices/String/: Makefile.am  Makefile.in  StringService.cpp  aes.h  cgcString.h
src/CGCServices/Xml/: Makefile.in  XmlService.cpp
src/CGCServices/ado/: AdoService.cpp
src/CGCServices/mysql/: Makefile.am  Makefile.in  MysqlPool.cpp  MysqlPool.h  MysqlService.cpp
src/CGCServices/pg/: Makefile.am  Makefile.in  PGService.cpp
src/CGCServices/pg/db/: pool.c  sink.c  sink.h
src/CGCServices/proj/MSVC9.0/: AdoService.vcproj  BodbService.vcproj  CGCServices.sln  ConfigurationService.vcproj  DateTimeService.vcproj  FileSystemService.vcproj  HttpService.vcproj  MysqlService.vcproj  NamespaceService.vcproj  PGService.vcproj  RtpService.vcproj  SipService.vcproj  SqliteService.vcproj  StringService.vcproj  XmlService.vcproj
src/CGCServices/sqlite/: Makefile.am  Makefile.in  SqliteService.cpp
src/CoreModules/: Makefile.am  Makefile.in  configure  configure.in  myconfigure
src/CoreModules/CGCP/: CGCP.cpp  Makefile.am  Makefile.in  SSNTService.h
src/CoreModules/CGCP/CGC/: CGCApp.cpp  CGCApp.h  HttpRequestImpl.h  HttpResponseImpl.cpp  HttpResponseImpl.h  IncludeBase.h  ModuleMgr.cpp  ModuleMgr.h  RequestImpl.h  SessionMgr.cpp  SessionMgr.h  SotpRequestImpl.h  SotpResponseImpl.cpp  SotpResponseImpl.h  TimerInfo.cpp  TimerInfo.h  XmlParseAutoUpdate.h  XmlParseCdbcs.h  XmlParseDefault.h  XmlParseModules.h  XmlParseParams.h  XmlParseWeb.h
src/CoreModules/LogService/: LogService.cpp  Makefile.am  Makefile.in  XmlParseLogSetting.h
src/CoreModules/ParserHttp/: Makefile.am  Makefile.in  ParserHttp.cpp
src/CoreModules/ParserSotp/: Makefile.am  Makefile.in  ParserSotp.cpp
src/CoreModules/SotpClientService/: SotpClientService.cpp
src/CoreModules/proj/MSVC9.0/: CGCP.vcproj  LogService.vcproj  MYCPCore.sln  MYCPCore2.sln  ParserHttp.vcproj  ParserSotp.vcproj  SotpClientService.vcproj
src/Projects/: Makefile.in  configure  configure.in
src/Projects/HttpServer/: CgcTcpClient.cpp  CgcTcpClient.h  FileScripts.cpp  FileScripts.h  HttpServer.cpp  Makefile.am  Makefile.in  MycpHttpServer.cpp  MycpHttpServer.h  ScriptItem.cpp  ScriptItem.h  TcpClient.h  VirtualHost.h  XmlParseApps.h  XmlParseDSs.h  XmlParseHosts.h  cgcaddress.h  pstr.h  tabconst.h
src/Projects/proj/MSVC9.0/: HttpServer.vcproj  MVCServer.vcproj  Projects.sln
src/proj/MSVC14.0/: CGCClass.vcxproj  CGCLib.vcxproj  MYCPBase.sln
src/proj/MSVC9.0/: CGCClass.vcproj  CGCLib.vcproj
src/proj/QT5.8/CGCClass/: CGCClass.pro
src/proj/QT5.8/CGCLib/: CGCLib.pro
