lib_LTLIBRARIES = libDateTimeService.la
THESOURCES = DateTimeService.cpp
libDateTimeService_la_SOURCES = $(THESOURCES)
libDateTimeService_la_LIBADD = $(libdir)/libboost_thread.a $(libdir)/libboost_filesystem.a $(libdir)/libboost_system.a
AM_CFLAGS=-fPIC -shared -Wall
AM_CXXFLAGS=-fPIC -shared -Wall

