lib_LTLIBRARIES = libFileSystemService.la
THESOURCES = FileSystemService.cpp
libFileSystemService_la_SOURCES = $(THESOURCES)
libFileSystemService_la_LIBADD = $(libdir)/libboost_thread.a $(libdir)/libboost_filesystem.a $(libdir)/libboost_system.a
AM_CFLAGS=-fPIC -shared -Wall
AM_CXXFLAGS=-fPIC -shared -Wall

